# world_cup_stats

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/: fct_world_cup_results.csv  fct_world_cup_results_per_country.csv
dbt_world_cup/: .user.yml  dbt_project.yml  profiles.yml
dbt_world_cup/data/: world_cup_results.csv
dbt_world_cup/models/clean/: clean.yml  clean_world_cup_results.sql
dbt_world_cup/models/marts/fct/: fct.yml  fct_world_cup_results.sql  fct_world_cup_results_per_country.sql
dbt_world_cup/models/staging/: historical_world_cup_results.sql  staging.yml
